--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,6 +1,7 @@
 name: Metrics
 on:
   schedule: [{cron: "0 */8 * * *"}]
+  push: {branches: "main"}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
